# garfield

./: .enject  .envrc  .gitignore  .gitmodules  README.md  bot.py  dialog_system.py  main.py  models.py  providers.toml  pyproject.toml
bots/: builtin.py  cot.py  llm.py  rag.py
