[project]
name = "garfield"
version = "0.1.0"
description = "Simple dialog system framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]",
    "openai",
    "rtoml",
    "simpleeval",
    "termcolor",
]

[tool.ruff.lint]
ignore = ["E402", "E701", "F403", "F405"]
